<resources>
    <string name="app_name">O4eRET</string>
    <string name="nav_network">Мережа</string>
    <string name="nav_browser">Браузер</string>
    <string name="nav_acoustic">Акустика</string>
    <string name="nav_chat">Чат</string>
    <string name="nav_info">Інфо</string>
    <string name="info_settings_title">Інфо / Налаштування</string>
    <string name="settings_header">Налаштування</string>
    <string name="node_running">Node: RUNNING</string>
    <string name="node_stopped">Node: STOPPED</string>
    <string name="start_node">Start node</string>
    <string name="stop_node">Stop node</string>
</resources>
