<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_network"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_network" />

    <item
        android:id="@+id/nav_browser"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_browser" />

    <item
        android:id="@+id/nav_acoustic"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/nav_acoustic" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_chat" />

    <item
        android:id="@+id/nav_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_info" />

</menu>
